Add ContainerAllocator and Add dataLocations to QueryUnit and Fragment